<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginFragmentImage"
        android:layout_width="300dp"
        android:layout_height="220dp"
        android:background="@drawable/ic_login"
        app:layout_constraintBottom_toTopOf="@+id/loginTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/loginTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="#00FF00"
        android:textColorHint="#00FF00"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="#00FF00"
        android:textColorHint="#00FF00"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/loginTextField" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="16dp"
        android:background="#00FF00"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="#00FF00"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registrationTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="end"
        android:text="@string/registration"
        android:textColor="#00FF00"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>